Lavvet lidt mere

--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -1,9 +1,3 @@
-/*!
- * Start Bootstrap - Freelancer v5.0.4 (https://startbootstrap.com/template-overviews/freelancer)
- * Copyright 2013-2019 Start Bootstrap
- * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap-freelancer/blob/master/LICENSE)
- */
-
 body {
   font-family: 'Lato';
 }
@@ -19,7 +13,8 @@ h6 {
 }
 
 hr.star-light,
-hr.star-dark {
+hr.star-dark,
+hr.star-contact {
   max-width: 15rem;
   padding: 0;
   text-align: center;
@@ -32,7 +27,8 @@ hr.star-dark {
 }
 
 hr.star-light:after,
-hr.star-dark:after {
+hr.star-dark:after,
+hr.star-contact:after {
   position: relative;
   top: -.8em;
   display: inline-block;
@@ -61,8 +57,24 @@ hr.star-dark:after {
   background-color: white;
 }
 
+hr.star-contact {
+  border-color: #fff;
+}
+
+hr.star-contact:after {
+  color: #fff;
+  background-color: #212529;
+}
+
 section {
   padding: 6rem 0;
+}
+
+section#contact {
+  background-color: #212529;
+  background-image: url(https://blackrockdigital.github.io/startbootstrap-agency/img/map-image.png);
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
 section h2 {
@@ -279,6 +291,9 @@ header.masthead h2 {
 .floating-label-form-group {
   position: relative;
   border-bottom: 1px solid #e9ecef;
+  background: #ffffff5e;
+  margin-bottom: 1rem !important;
+  
 }
 
 .floating-label-form-group input,
@@ -296,6 +311,10 @@ header.masthead h2 {
   box-shadow: none !important;
 }
 
+.floating-label-form-group ::placeholder {
+  color: #202020
+}
+
 .floating-label-form-group label {
   font-size: 0.85em;
   line-height: 1.764705882em;
@@ -306,8 +325,6 @@ header.masthead h2 {
   margin: 0;
   -webkit-transition: top 0.3s ease, opacity 0.3s ease;
   transition: top 0.3s ease, opacity 0.3s ease;
-  vertical-align: middle;
-  vertical-align: baseline;
   opacity: 0;
 }
 
@@ -319,10 +336,11 @@ header.masthead h2 {
 .floating-label-form-group-with-value label {
   top: 0;
   opacity: 1;
+  color: #202020
 }
 
 .floating-label-form-group-with-focus label {
-  color: #18BC9C;
+  color: #202020;
 }
 
 form .row:first-child .floating-label-form-group {
